--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -531,7 +531,7 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        <h1 id = "Header">Campaigns & Accomplishments<br><i style = "font-size:2vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more petition info</i></h1>
+        <h1 id = "Header">Campaigns & Accomplishments<br><i style = "font-size:2vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more campaign and petition info</i></h1>
         <h2>Current Accomplishments</h2>
         <div class="row">
           <div class="column">
