--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -27,6 +27,18 @@
                 font-size: 100%;
                 margin: 0;
             }    
+            h1 { 
+                font-weight: bold;
+                font-size: 4em;
+            }
+            h2{
+                font-weight: bold;
+                font-size: 2.4em;
+            }
+            li{
+                padding:5px;
+                line-height: 2;
+            }
             mark {
               background-color: #f7fff6ff;
               color: inherit;
@@ -182,7 +194,7 @@
             }
             #Header{
                 font-family: Montserrat;
-                font-size: 5.12vw;
+                font-size: 5vw;
                 font-weight: bold;
                 text-align: center;
                 position: relative;
@@ -531,11 +543,11 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        <h1 id = "Header">Campaigns & Accomplishments<br><i style = "font-size:2vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more campaign and petition info</i></h1>
+        <h1 id = "Header">Campaigns &<br>Accomplishments<br><i style = "font-size:2vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more<br>campaign and petition info</i></h1>
         <h2>Current Accomplishments</h2>
-        <div class="row">
+        <div class="row" style = "font-style: Montserrat">
           <div class="column">
-            <h3>Agendized a Moratorium</h3>
+            <h3 style = "font-style: Roboto">Agendized a Moratorium</h3>
               <ul>
                   <li>Public comments on artificial turf at several Saratoga city council meetings</li>
                   <li>Correspondence with city officials</li>
@@ -551,7 +563,7 @@
               </ul>
           </div>
           <div class="column">
-            <h3>Passed an ordinance</h3>
+            <h3 style = "font-style: Roboto">Passed an ordinance</h3>
             <ul>
                 <li>Collaborated with other environmental action organizations</li>
                 <li>Public comments on reusable utensils at Half Moon Bay city council meeting</li>
