--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -215,11 +215,12 @@
                 left:auto;
             }
             .row {
-              display: flex;
+                display: flex;
+                text-align: center;
             }
             
             .column {
-              flex: 50%;
+                flex: 50%;
             }
             #copyright {
                 position: absolute;
