--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -27,11 +27,11 @@
                 font-size: 100%;
                 margin: 0;
             }    
-            h1 { 
+            h2 { 
                 font-weight: bold;
                 font-size: 4em;
             }
-            h2{
+            h3{
                 font-weight: bold;
                 font-size: 2.4em;
             }
@@ -514,7 +514,7 @@
         <img id = "TopBanner" src="/images/TopBanner3.svg">
         <div class="LinksMenu">
             <a href="https://shseac.org/articles/" style="padding-left: 12%;">Articles</a>
-            <!--<a href="https://shseac.org/campaigns/" style="padding-left: 12%;">Campaign</a>-->
+            <a href="https://shseac.org/campaigns/" style="padding-left: 12%;">Campaign</a>
             <a href="https://shseac.org/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
@@ -582,7 +582,14 @@
         <img class = "leaves one" src="/images/Leaves.svg">
         <img class = "leaves two" src="/images/Leaves.svg">
         <img class = "spacer" src = /images/Leaves.svg">
-        <a href = "https://www.ycats.org/our-campaign-against-artificial-turf-at-saratoga-high-school" target="_blank">Preventing Artificial Turf at SHS</a>
+        <p>Also check out:</p>
+        <ul style = "text-align: center">
+            <li><a href = "https://www.ycats.org/our-campaign-against-artificial-turf-at-saratoga-high-school" target="_blank">Preventing Artificial Turf at SHS</a></li>
+            <li><a href = "https://chng.it/ybcg8KCr56" target="_blank">Replacing Artificial Turf at SHS with real grass</a></li>
+            <li><a href = "https://chng.it/wc6Qd8GN76" target="_blank">Support AB38, the Night Sky Bill</a></li>
+            <li><a href = "https://www.change.org/p/support-sb499-the-heat-mitigation-bill" target="_blank">Support SB499, the Heat Mitigation Bill</a></li>>
+            <li><a href = "https://www.change.org/p/support-ab1423-to-ban-toxic-pfas-forever-chemicals?signed=true">Support AB1423 to ban toxic PFAS (Forever Chemicals)</a></li>
+        </ul>
         <div class="Footer">
             <h3>About</h3>
             <p>
