--- a/about-us/index.html
+++ b/about-us/index.html
@@ -154,9 +154,6 @@
             }
             .CampaignsButton{
                 right: 15.5vw;
-                
-                /* TEMPORARY */
-                visibility: hidden !important;
             }
             .AboutUsButton{
                 right: 3vw;
@@ -518,7 +515,7 @@
         <img id = "TopBanner" src="/images/TopBanner3.svg">
         <div class="LinksMenu">
             <a href="https://shseac.org/articles/" style="padding-left: 12%;">Articles</a>
-            <!--<a href="https://shseac.org/campaigns/" style="padding-left: 12%;">Campaign</a>-->
+            <a href="https://shseac.org/campaigns/" style="padding-left: 12%;">Campaign</a>
             <a href="https://shseac.org/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
