--- a/index.html
+++ b/index.html
@@ -154,9 +154,6 @@
             }
             .CampaignsButton{
                 right: 15.5vw;
-
-                /* TEMPORARY */
-                visibility: hidden !important;
             }
             .AboutUsButton{
                 right: 3vw;
@@ -739,7 +736,7 @@
         <img id = "halftone" src="images/halftone2.png">
         <div class="LinksMenu">
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/articles/" style="padding-left: 12%;">Articles</a>
-            <!--<a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/" style="padding-left: 12%;">Campaign</a>-->
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/" style="padding-left: 12%;">Campaign</a>
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
