--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -30,14 +30,23 @@
             h2 { 
                 font-weight: bold;
                 font-size: 4em;
+                color: green;
             }
             h3{
                 font-weight: bold;
                 font-size: 2.4em;
+                color:#006400;
             }
             li{
                 padding:5px;
                 line-height: 2;
+                font-size: 1.5em;
+                font-style: Montserrat;
+                color: gray
+            }
+            ul{
+              display: inline-block;
+              text-align: left;
             }
             mark {
               background-color: #f7fff6ff;
