--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -29,20 +29,24 @@
             }    
             h2 { 
                 font-weight: bold;
-                font-size: 4em;
+                font-size: 4rem;
                 color: green;
             }
             h3{
                 font-weight: bold;
-                font-size: 2.4em;
+                font-size: 2.4rem;
                 color:#006400;
+            }
+            i{
+                line-height:1;
+                font-weight: normal;
             }
             li{
                 padding:5px;
                 line-height: 2;
-                font-size: 1.5em;
+                font-size: 1.5rem;
                 font-style: Montserrat;
-                color: gray
+                color: gray;
             }
             ul{
               display: inline-block;
@@ -553,7 +557,7 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        <h1 id = "Header">Campaigns &<br>Accomplishments<br><i style = "font-size:2vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more<br>campaign and petition info</i></h1>
+        <h1 id = "Header">Campaigns &<br>Accomplishments<br><i style = "font-size:1.5vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more<br>campaign and petition info</i></h1>
         <h2>Current Accomplishments</h2>
         <div class="row" style = "font-style: Montserrat">
           <div class="column">
