--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -37,10 +37,6 @@
                 font-size: 2.4rem;
                 color:#006400;
             }
-            i{
-                line-height:1;
-                font-weight: normal;
-            }
             li{
                 padding:5px;
                 line-height: 2;
@@ -212,6 +208,10 @@
                 text-align: center;
                 position: relative;
                 top:0.88vw;
+            }
+            #Header i{
+                line-height:1;
+                font-weight: normal;
             }
             .leaves{
                 position:absolute;
