--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -196,21 +196,21 @@
             }
             #Accomplishments { 
                 font-weight: bold;
-                font-size: 4rem;
-                color: green;
+                font-size: 4.53rem;
+                color: #50BC55;
                 font-family: Montserrat;
                 text-align: center;
             }
             .Sections{
                 font-weight: bold;
-                font-size: 2.4rem;
-                color:#006400;
+                font-size: 3.8rem;
+                color:#103712;
                 font-family: 'Roboto';
             }
             li{
                 padding:1.5vw;
-                line-height: 2;
-                font-size: 1.5rem;
+                line-height: 1.3;
+                font-size: 2.5rem;
                 font-family: Montserrat;
                 color: gray;
             }
