--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -182,17 +182,23 @@
             }
             #Header{
                 font-family: Montserrat;
-                font-size: 5vw;
+                font-size: 4.9vw;
                 font-weight: bold;
                 text-align: center;
                 position: relative;
-                top:0.88vw;
+                top:0.63vw;
             }
             #Header i{
+                line-height: 1;
                 font-weight: normal;
             }
-            #Header i, a{
-                line-height:1;
+            #Header a{
+                line-height: 1;
+                font-weight: bold;
+            }
+            #Header br {
+               display: block;
+               margin: .2rem 0;
             }
             #Accomplishments { 
                 font-weight: bold;
