--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -223,14 +223,18 @@
             ul{
                 display: inline-block;
                 text-align: left;
+                margin: 10px;
             }
             #Also{
                 font-size: 3rem;
                 text-align: center;
+                font-family: Montserrat;
+                font-weight: bold;
             }
             #LinkList{
                 text-align: center;
-                color: green;
+                color: green !important;
+                left: 50%;
             }
             .leaves{
                 position:absolute;
@@ -627,7 +631,7 @@
             <p>
                 <a href = "https://shseac.org/about-us/">About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club" target="_blank">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club" target="_blank">Sign up & other<br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
