--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -207,7 +207,11 @@
             #LinkList{
                 text-align: center;
                 color: green !important;
+                color: inherit !important;
+                text-decoration: none;
+                text-decoration: underline;
                 display: inline-block;
+                list-style-type: none
             }
             #Accomplishments { 
                 font-weight: bold;
