--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -199,10 +199,11 @@
                 max-width:3vw;
             }
             #Also{
-                font-size: 3rem;
+                font-size: 3vw;
                 text-align: center;
                 font-family: Montserrat;
                 font-weight: bold;
+                top:-15vw;
             }
             #LinkList{
                 text-align: center;
@@ -211,25 +212,26 @@
                 text-decoration: none;
                 text-decoration: underline;
                 display: inline-block;
-                list-style-type: none
+                list-style-type: none;
+                top:-15vw;
             }
             #Accomplishments { 
                 font-weight: bold;
-                font-size: 4.53rem;
+                font-size: 4.53vw;
                 color: #50BC55;
                 font-family: Montserrat;
                 text-align: center;
             }
             .Sections{
                 font-weight: bold;
-                font-size: 3.8rem;
+                font-size: 3.8vw;
                 color:#103712;
                 font-family: 'Roboto';
             }
             li{
                 padding:1.5vw;
                 line-height: 1.3;
-                font-size: 2.5rem;
+                font-size: 2.5vw;
                 font-family: Montserrat;
                 color: gray;
             }
