--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -218,14 +218,14 @@
             #Accomplishments { 
                 font-weight: bold;
                 font-size: 4.53vw;
-                color: #50BC55;
+                color: #6AA84F;
                 font-family: Montserrat;
                 text-align: center;
             }
             .Sections{
                 font-weight: bold;
                 font-size: 3.8vw;
-                color:#103712;
+                color:#274E13;
                 font-family: 'Roboto';
             }
             li{
@@ -233,7 +233,7 @@
                 line-height: 1.3;
                 font-size: 2.5vw;
                 font-family: Montserrat;
-                color: gray;
+                color: #595984;
             }
             ul{
                 display: inline-block;
