--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -588,14 +588,14 @@
         <img class = "leaves one" src="/images/Leaves.svg">
         <img class = "leaves two" src="/images/Leaves.svg">
         <img class = "spacer" src = /images/Leaves.svg">
-        <p id = "Also">Some campaign resources:</p>
+        <p id = "Also">Campaign resources:</p>
         <div style = "text-align:center;">
             <ul id = "LinkList">
-                <li><a href = "https://www.ycats.org/our-campaign-against-artificial-turf-at-saratoga-high-school" target="_blank">Preventing Artificial Turf at SHS</a></li>
                 <li><a href = "https://chng.it/ybcg8KCr56" target="_blank">Replacing Artificial Turf at SHS with real grass</a></li>
                 <li><a href = "https://chng.it/wc6Qd8GN76" target="_blank">Support AB38, the Night Sky Bill</a></li>
                 <li><a href = "https://www.change.org/p/support-sb499-the-heat-mitigation-bill" target="_blank">Support SB499, the Heat Mitigation Bill</a></li>
                 <li><a href = "https://www.change.org/p/support-ab1423-to-ban-toxic-pfas-forever-chemicals?signed=true">Support AB1423 to ban toxic PFAS (Forever Chemicals)</a></li>
+                <li><a href = "https://www.ycats.org/our-campaign-against-artificial-turf-at-saratoga-high-school" target="_blank">Preventing Artificial Turf at SHS</a></li>
             </ul>
         </div>
         <h2 id = "Accomplishments">Current Accomplishments</h2>
