--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -198,7 +198,8 @@
                 font-weight: bold;
                 max-width:3vw;
             }
-            #Also{
+            #Resources{
+                position:relative;
                 font-size: 3vw;
                 text-align: center;
                 font-family: Montserrat;
@@ -206,6 +207,7 @@
                 top:-15vw;
             }
             #LinkList{
+                position:relative;
                 text-align: center;
                 color: green !important;
                 color: inherit !important;
@@ -217,23 +219,24 @@
             }
             #Accomplishments { 
                 font-weight: bold;
-                font-size: 4.53vw;
+                font-size: 3.53vw;
                 color: #6AA84F;
                 font-family: Montserrat;
                 text-align: center;
             }
             .Sections{
                 font-weight: bold;
-                font-size: 3.8vw;
+                font-size: 2.5vw;
                 color:#274E13;
                 font-family: 'Roboto';
             }
             li{
                 padding:1.5vw;
-                line-height: 1.3;
-                font-size: 2.5vw;
+                line-height: 1.2;
+                font-size: 1.5vw;
                 font-family: Montserrat;
                 color: #595984;
+                margin: 15px;
             }
             ul{
                 display: inline-block;
@@ -588,7 +591,7 @@
         <img class = "leaves one" src="/images/Leaves.svg">
         <img class = "leaves two" src="/images/Leaves.svg">
         <img class = "spacer" src = /images/Leaves.svg">
-        <p id = "Also">Campaign resources:</p>
+        <p id = "Resources">Campaign resources:</p>
         <div style = "text-align:center;">
             <ul id = "LinkList">
                 <li><a href = "https://chng.it/ybcg8KCr56" target="_blank">Replacing Artificial Turf at SHS with real grass</a></li>
