--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -189,12 +189,12 @@
                 top: -4.37vw;
             }
             #Header i{
-                line-height: 1;
+                line-height: .8;
                 font-weight: normal;
                 max-width:3vw;
             }
             #Header a{
-                line-height: 1;
+                line-height: .8;
                 font-weight: bold;
                 max-width:3vw;
             }
@@ -204,6 +204,7 @@
                 text-align: center;
                 font-family: Montserrat;
                 font-weight: bold;
+                line-height: .9;
                 top:-15vw;
             }
             #LinkList{
@@ -215,25 +216,28 @@
                 text-decoration: underline;
                 display: inline-block;
                 list-style-type: none;
+                line-height: .9;
                 top:-15vw;
             }
             #Accomplishments { 
                 font-weight: bold;
-                font-size: 3.53vw;
+                font-size: 3.54vw;
                 color: #6AA84F;
                 font-family: Montserrat;
                 text-align: center;
+                line-height: .9;
             }
             .Sections{
                 font-weight: bold;
-                font-size: 2.5vw;
+                font-size: 2.4vw;
                 color:#274E13;
                 font-family: 'Roboto';
+                line-height: .9;
             }
             li{
                 padding:1.5vw;
-                line-height: 1.2;
-                font-size: 1.5vw;
+                line-height: .95;
+                font-size: 1.65vw;
                 font-family: Montserrat;
                 color: #595984;
                 margin: 15px;
@@ -587,7 +591,7 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        <h1 id = "Header">Campaigns &<br>Accomplishments<br><i style = "font-size:1.5vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more campaign and petition info</i></h1>
+        <h1 id = "Header">Campaigns &<br>Accomplishments<br><i style = "font-size:1.65vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more campaign and petition info</i></h1>
         <img class = "leaves one" src="/images/Leaves.svg">
         <img class = "leaves two" src="/images/Leaves.svg">
         <img class = "spacer" src = /images/Leaves.svg">
