--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -235,8 +235,8 @@
                 line-height: .9;
             }
             li{
-                padding:1.5vw;
-                line-height: .95;
+                padding-left:1.5vw;
+                line-height: 1;
                 font-size: 1.65vw;
                 font-family: Montserrat;
                 color: #595984;
