--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -27,6 +27,9 @@
                 font-size: 100%;
                 margin: 0;
             }    
+            a{
+                color: inherit !important;
+            }
             mark {
               background-color: #f7fff6ff;
               color: inherit;
