--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -201,6 +201,10 @@
                 font-weight: bold;
                 max-width:3vw;
             }
+            #divformat{
+                text-align:center;
+                height:5px;
+            }
             #Resources{
                 position:relative;
                 font-size: 3vw;
@@ -208,7 +212,7 @@
                 font-family: Montserrat;
                 font-weight: bold;
                 line-height: .9;
-                top:-15vw;
+                top:-17vw;
             }
             #LinkList{
                 position:relative;
@@ -220,7 +224,9 @@
                 display: inline-block;
                 list-style-type: none;
                 line-height: .9;
-                top:-15vw;
+                font-size:1.7vw;
+                top:-18vw;
+                padding-top:.9vw;
             }
             #Accomplishments { 
                 font-weight: bold;
@@ -237,13 +243,14 @@
                 font-family: 'Roboto';
                 line-height: .9;
             }
-            li{
+            .Sections li{
                 padding-left:1.5vw;
                 line-height: 1;
                 font-size: 1.65vw;
                 font-family: Montserrat;
                 color: #595984;
                 margin: 15px;
+                padding-top:.9vw;
             }
             ul{
                 display: inline-block;
@@ -599,7 +606,7 @@
         <img class = "leaves two" src="/images/Leaves.svg">
         <img class = "spacer" src = /images/Leaves.svg">
         <p id = "Resources">Campaign resources:</p>
-        <div style = "text-align:center;">
+        <div id = "divformat">
             <ul id = "LinkList">
                 <li><a href = "https://chng.it/ybcg8KCr56" target="_blank">Replacing Artificial Turf at SHS with real grass</a></li>
                 <li><a href = "https://chng.it/wc6Qd8GN76" target="_blank">Support AB38, the Night Sky Bill</a></li>
