--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -654,7 +654,7 @@
             <p>
                 <a href = "https://shseac.org/about-us/">About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club" target="_blank">Sign up & other<br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club" target="_blank">Sign up & other<br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
