--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -203,22 +203,23 @@
             }
             #divformat{
                 text-align:center;
-                height:5px;
+                height:15px;
             }
             #Resources{
                 position:relative;
-                font-size: 3vw;
                 text-align: center;
                 font-family: Montserrat;
                 font-weight: bold;
                 line-height: .9;
                 top:-17vw;
+                font-size: 3.54vw;
+                color: #6AA84F;
+                margin-bottom:0;
             }
             #LinkList{
                 position:relative;
                 text-align: center;
-                color: green !important;
-                color: inherit !important;
+                color: #006400 !important;
                 text-decoration: none;
                 text-decoration: underline;
                 display: inline-block;
@@ -245,12 +246,12 @@
             }
             li{
                 padding-left:1.5vw;
-                line-height: 1;
-                font-size: 1.65vw;
+                line-height: 1.1;
+                font-size: 1.7vw;
                 font-family: Montserrat;
                 color: #595984;
                 margin: 15px;
-                padding-top:.9vw;
+                padding-top:1.12vw;
             }
             ul{
                 display: inline-block;
