--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -203,7 +203,7 @@
             }
             #divformat{
                 text-align:center;
-                height:15px;
+                height:2vw;;
             }
             #Resources{
                 position:relative;
@@ -236,17 +236,19 @@
                 font-family: Montserrat;
                 text-align: center;
                 line-height: .9;
+                position: relative;
+                top:2.5vw;
             }
             .Sections{
                 font-weight: bold;
-                font-size: 2.4vw;
+                font-size: 2.5vw;
                 color:#274E13;
                 font-family: 'Roboto';
                 line-height: .9;
             }
             li{
                 padding-left:1.5vw;
-                line-height: 1.1;
+                line-height: 1.25;
                 font-size: 1.7vw;
                 font-family: Montserrat;
                 color: #595984;
@@ -257,6 +259,7 @@
                 display: inline-block;
                 text-align: left;
                 margin: 10px;
+                width:88.5%;
             }
             .leaves{
                 position:absolute;
