--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -251,10 +251,10 @@
                 line-height: 1.25;
                 font-size: 1.7vw;
                 font-family: Montserrat;
-                color: #595984;
                 margin: 15px;
                 padding-top:1.12vw;
             }
+
             ul{
                 display: inline-block;
                 text-align: left;
@@ -279,7 +279,9 @@
                 display: flex;
                 text-align: center;
             }
-            
+            .row li{
+                color: #595984;
+            }
             .column {
                 flex: 50%;
             }
