--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -279,7 +279,7 @@
                 display: flex;
                 text-align: center;
             }
-            .row li{
+            .accul li{
                 color: #595984;
             }
             .column {
@@ -625,7 +625,7 @@
         <div class="row">
             <div class="column">
                 <h3 class = "Sections">Agendized a Moratorium</h3>
-                <ul>
+                <ul class = "accul">
                     <li>Public comments on artificial turf at several Saratoga city council meetings</li>
                     <li>Correspondence with city officials</li>
                     <li>Contacted Santa Clara County Medical Association & asked them to write an official letter on artificial turf, which they sent to the school board & administration</li>
@@ -641,7 +641,7 @@
             </div>
             <div class="column">
                 <h3 class = "Sections">Passed an ordinance</h3>
-                <ul>
+                <ul class = "accul">
                     <li>Collaborated with other environmental action organizations</li>
                     <li>Public comments on reusable utensils at Half Moon Bay city council meeting</li>
                     <li>Consistently meeting Sierra Club constituents</li>
