--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -237,7 +237,7 @@
                 text-align: center;
                 line-height: .9;
                 position: relative;
-                top:2.5vw;
+                top:4.5vw;
             }
             .Sections{
                 font-weight: bold;
@@ -245,6 +245,8 @@
                 color:#274E13;
                 font-family: 'Roboto';
                 line-height: .9;
+                top:1.1vw;
+                position: relative;
             }
             li{
                 padding-left:1.5vw;
@@ -259,7 +261,7 @@
                 display: inline-block;
                 text-align: left;
                 margin: 10px;
-                width:88.5%;
+                width: 69%;
             }
             .leaves{
                 position:absolute;
