--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -200,6 +200,7 @@
                 line-height: .8;
                 font-weight: bold;
                 max-width:3vw;
+                color: #bcff9d !important
             }
             #divformat{
                 text-align:center;
