--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -200,7 +200,7 @@
                 line-height: .8;
                 font-weight: bold;
                 max-width:3vw;
-                color: #bcff9d !important
+                color: green !important
             }
             #divformat{
                 text-align:center;
@@ -212,7 +212,7 @@
                 font-family: Montserrat;
                 font-weight: bold;
                 line-height: .9;
-                top:-17vw;
+                top:-16vw;
                 font-size: 3.54vw;
                 color: #6AA84F;
                 margin-bottom:0;
@@ -227,7 +227,7 @@
                 list-style-type: none;
                 line-height: .9;
                 font-size:1.7vw;
-                top:-18vw;
+                top:-17vw;
                 padding-top:.9vw;
             }
             #Accomplishments { 
@@ -236,9 +236,9 @@
                 color: #6AA84F;
                 font-family: Montserrat;
                 text-align: center;
-                line-height: .9;
+                line-height: 1;
                 position: relative;
-                top:4.5vw;
+                top:5.5vw;
             }
             .Sections{
                 font-weight: bold;
@@ -246,13 +246,13 @@
                 color:#274E13;
                 font-family: 'Roboto';
                 line-height: .9;
-                top:1.1vw;
+                top:2.1vw;
                 position: relative;
             }
             li{
                 padding-left:1.5vw;
-                line-height: 1.25;
-                font-size: 1.7vw;
+                line-height: 1.3;
+                font-size: 1.8vw;
                 font-family: Montserrat;
                 margin: 15px;
                 padding-top:1.12vw;
