--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -249,6 +249,12 @@
                 top:4.4vw;
                 position: relative;
             }
+            ul{
+                display: inline-block;
+                text-align: left;
+                margin: 10px;
+                width: 69%;
+            }
             li{
                 padding-left:1.5vw;
                 line-height: 1.3;
@@ -257,13 +263,6 @@
                 margin: 15px;
                 top:1.2vw;
                 padding-top:1.12vw;
-            }
-
-            ul{
-                display: inline-block;
-                text-align: left;
-                margin: 10px;
-                width: 69%;
             }
             .leaves{
                 position:absolute;
@@ -288,6 +287,12 @@
             }
             .column {
                 flex: 50%;
+            }
+            #mascot{
+                left:80%;
+                position: relative;
+                top:-3vw;
+                width:4vw;
             }
             #copyright {
                 position: absolute;
@@ -659,6 +664,7 @@
                 </ul>
             </div>
         </div>
+        <img id = "mascot" src = /images/mascot.png">
         <div class="Footer">
             <h3>About</h3>
             <p>
